# RedPajama-Data

./: .gitignore  README.md  pyproject.toml
.github/workflows/: linear_pr_checker.yml
app/: .dockerignore  Dockerfile  requirements.txt
app/src/: bloomfilter.py  pipeline.py  prep_artifacts.py  run_lsh.py  token_count.py
app/src/core/: worker.py  (+4 more)
configs/: rp_v2.0.conf
contamination_analysis/: README.md  extract_contaminated.py  generate_ngrams.py  requirements.txt
contamination_analysis/scripts/: run_extract_contaminated.sbatch  run_generate_ngrams.sbatch
contamination_analysis/src/: ngrams.py  reader.py
data_prep/: README.md
data_prep/arxiv/: README.md  arxiv_cleaner.py  arxiv_requirements.txt  aws_config.ini  run_clean.py  run_download.py  token_count.py  utils.py
data_prep/book/: README.md  dedup.py  download.py  token_count.py
data_prep/c4/: README.md  c4-reformat-slurm.sbatch  c4_reformat.py  c4_requirements.txt
data_prep/cc/: README.md
data_prep/github/: README.md  github_clean_dedup_local.py  github_global_dedup.py  github_merge_dedup.py  github_run_filter.py  github_token_count.py
data_prep/stack_exchange/: README.md  count.py  download.py  filter.py  post_processing.py  print_stats.py  token_count.py
data_prep/wiki/: README.md  download.py  token_count.py
db/: build.py  schema.py
scripts/: apptainer_run_lsh.sh  apptainer_run_quality_signals.sh  run_prep_artifacts.sh
tokenization/: README.md  count_tokens.py
viz/: README.md  embed_jsonl.py  index_faiss.py  main_large.py  main_small.py  reduce_pca32.py  requirements.txt  utils.py
(+78 files in other folders)
