[project]
name = "redpajama"
version = "0.0.1"
authors = [
  { name="Together", email="together@together.xyz" },
]
description = "An Open Source Recipe to Reproduce LLaMA training dataset"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[tool.setuptools]
package-dir = {"" = "data_prep"}

[project.urls]
"Homepage" = "https://github.com/togethercomputer/RedPajama-Data"
"Bug Tracker" = "https://github.com/togethercomputer/RedPajama-Data/issues"
